[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "afquery"
dynamic = ["version"]
description = "Genomic allele frequency query engine with bitmap-encoded genotypes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyroaring>=0.4.8",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "pyranges>=0.1.2,<0.2",
    "click>=8.1",
    "cyvcf2>=0.30",
    "tqdm>=4.60",
]

[project.scripts]
afquery = "afquery.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/afquery/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/afquery"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/afquery"]
branch = true

[tool.coverage.report]
show_missing = true
